--- a/test/config.yml
+++ b/test/config.yml
@@ -15,7 +15,7 @@ targets:
       bucket: test.bucket.test
       region: ap-northeast-1
       key_prefix: test/foo
-    sql_option: "JSON GZIP"
+    sql_option: "JSON 'auto' GZIP"
   - redshift:
       host: localhost
       port: 5432
