--- a/test/config.yml
+++ b/test/config.yml
@@ -1,31 +1,32 @@
 queue_name: rin_test
+
 credentials:
   aws_access_key_id: AAA
   aws_secret_access_key: SSS
   aws_region: ap-northeast-1
+
+s3:
+  bucket: test.bucket.test
+  region: ap-northeast-1
+
+sql_option: "JSON 'auto' GZIP"
+
+redshift:
+  host: localhost
+  port: 5432
+  dbname: test
+  user: test_user
+  password: test_pass
+
 targets:
   - redshift:
-      host: localhost
-      port: 5432
-      dbname: test
-      user: test_user
-      password: test_pass
       table: foo
     s3:
-      bucket: test.bucket.test
-      region: ap-northeast-1
       key_prefix: test/foo
-    sql_option: "JSON 'auto' GZIP"
+
   - redshift:
-      host: localhost
-      port: 5432
-      dbname: test
-      user: test_user
-      password: test_pass
       schema: xxx
       table: bar
     s3:
-      bucket: test.bucket.test
-      region: ap-northeast-1
       key_prefix: test/bar
     sql_option: "CSV DELIMITER ',' ESCAPE"
