use GetClusterCredential to get temporary password for Redshift.

--- a/test/localstack.yml
+++ b/test/localstack.yml
@@ -4,7 +4,7 @@ credentials:
   aws_region: ap-northeast-1
 
 s3:
-  bucket: test.bucket.test
+  bucket: rin-test
   region: ap-northeast-1
 
 sql_option: "JSON 'auto' GZIP"
@@ -13,25 +13,10 @@ redshift:
   host: localhost
   port: 4577
   dbname: test
-  user: test_user
-  password: test_pass
+  user: root
 
 targets:
   - redshift:
       table: foo
     s3:
-      key_prefix: test/foo
-
-  - redshift:
-      schema: xxx
-      table: bar
-    s3:
-      key_prefix: test/bar
-    sql_option: "CSV DELIMITER ',' ESCAPE"
-
-  - redshift:
-      schema: $1
-      table: $2
-    s3:
-      bucket: example.bucket
-      key_regexp: test/(s[0-9]+)/(t[0-9]+)/
+      key_prefix: test_xxx/foo
