--- a/test/config.yml
+++ b/test/config.yml
@@ -2,7 +2,7 @@ queue_name: rin_test
 
 credentials:
   aws_access_key_id: AAA
-  aws_secret_access_key: SSS
+  aws_secret_access_key: '{{ must_env "AWS_SECRET_ACCESS_KEY" }}'
   aws_region: ap-northeast-1
 
 s3:
