Add discard option.
Do not import even if matches the target.
This is useful for ignoring some key patterns in events.

--- a/test/config.yml
+++ b/test/config.yml
@@ -19,6 +19,10 @@ redshift:
   password: test_pass
 
 targets:
+  - s3:
+      key_prefix: test/foo/discard
+    discard: true
+
   - redshift:
       table: foo
     s3:
