--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,8 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release Image
+        env:
+          GITHUB_TOKEN: ${{ secrets.PACKAGES_RELEASE_TOKEN }}
+        run: |
+          make release-image
